@@ -85,22 +85,51 @@ public class EventServiceImpl implements EventService {
     // Custom methods
     @Override
     public List<Event> getEventsByTag(String tag) {
-        return List.of();
+         if (tag == null || tag.trim().isEmpty()) {
+            System.err.println("The tag can't be null");
     }
 
+    List<Event> events = eventRepository.findByTag(tag);
+        return events != null ? events : Collections.emptyList();
+    }
+    }
     @Override
     public List<Event> getUpcomingEvents() {
-        return List.of();
+        List<Event> allEvents = eventRepository.findAll(); 
+        
+        if (allEvents == null || allEvents.isEmpty()) {
+            return Collections.emptyList(); 
+        }
+
+        return allEvents.stream()
+                .filter(event -> event.getStartTime() != null && event.getStartTime().isAfter(now))
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Event> getEventsByPriceRange(BigDecimal minPrice, BigDecimal maxPrice) {
-       return List.of();
+        if (minPrice < 0 || maxPrice < 0 || minPrice > maxPrice) {
+            System.err.println("Invalid price range");
+            return Collections.emptyList(); 
+        }
+
+        List<Event> events = eventRepository.findByPriceRange(minPrice, maxPrice);
+        return events != null ? events : Collections.emptyList();
     }
 
     @Override
     public List<Event> getEventsByDateRange(LocalDateTime start, LocalDateTime end) {
-        return List.of();
+       if (startDate == null || endDate == null) {
+        System.err.println("Start date and end date can't be null");
+        return Collections.emptyList();
+       }
+        if (startDate.isAfter(endDate)){
+            System.err.println("Start date can't be after the end date.");
+            return Collections.emptyList();
+        }
+        
+        List <event> events = eventRepository.findByDateRange(startDate,endDate);
+            return events != null ? events : Collections.emptyList();
     }
 
     @Override
@@ -108,4 +137,3 @@ public class EventServiceImpl implements EventService {
         return null;
     }
 
-}
